--- a/app/src/main/res/layout/item_users_skeleton.xml
+++ b/app/src/main/res/layout/item_users_skeleton.xml
@@ -30,11 +30,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image">
 
+        <TextView
+            android:id="@+id/nick"
+            android:textColor="@color/secondary_text_color"
+            style="@style/text_medium_12_style"
+            android:layout_marginBottom="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="\@utyuganov" />
+
         <LinearLayout
             android:id="@+id/userInfoContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
             android:orientation="horizontal">
 
             <TextView
@@ -43,7 +51,7 @@
                 style="@style/text_medium_16_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Эйфория" />
+                android:text="Эйфорияdad" />
 
         </LinearLayout>
 
