--- a/app/src/main/res/layout/dialog_item_edittext.xml
+++ b/app/src/main/res/layout/dialog_item_edittext.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/title"
             style="@style/text_bold_16_style"
             android:textSize="18dp"
             android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
             android:text="Напишите краткий комментарий с указанием причины"
             android:textColor="@color/secondary_text_color"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <EditText
             android:id="@+id/textBun"
