--- a/app/src/main/res/layout/item_followers.xml
+++ b/app/src/main/res/layout/item_followers.xml
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="232 подписчиков"
+        android:text="... подписчиков"
         android:textColor="@color/secondary_text_color"
         app:layout_constraintBottom_toBottomOf="@+id/image"
         app:layout_constraintStart_toStartOf="@+id/name" />
