--- a/app/src/main/res/layout/item_followers.xml
+++ b/app/src/main/res/layout/item_followers.xml
@@ -20,8 +20,8 @@
 
     <ProgressBar
         android:id="@+id/progressBarImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/image"
         app:layout_constraintEnd_toEndOf="@+id/image"
         app:layout_constraintStart_toStartOf="@+id/image"
