--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -41,15 +41,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnGoBack" />
 
+    <TextView
+        android:id="@+id/verify_tg"
+        style="@style/text_medium_12_style"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:gravity="center"
+        android:text="Свяжитесь с нами в Telegram, для\nполучения статуса верефицированной организации"
+        android:textColor="@color/secondary_text_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:outlineSpotShadowColor="@color/white"
-        android:scrollbars="none"
         android:paddingHorizontal="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toTopOf="@+id/verify_tg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textHeader">
@@ -66,8 +80,8 @@
                 android:layout_margin="5dp"
                 android:background="@null"
                 android:padding="5dp"
-                android:visibility="gone"
                 android:src="@drawable/trash"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/imageUser"
                 app:layout_constraintStart_toEndOf="@+id/imageUser" />
 
@@ -76,13 +90,13 @@
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_marginTop="10dp"
-                app:shapeAppearanceOverlay="@style/circular_image"
-                android:scaleType="center"
                 android:background="@color/stroke_color"
+                android:scaleType="center"
                 android:src="@drawable/plus"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/circular_image" />
 
             <ProgressBar
                 android:id="@+id/progressBarImage"
@@ -109,8 +123,8 @@
                 android:id="@+id/info_nick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@null"
                 android:layout_marginStart="5dp"
+                android:background="@null"
                 android:src="@drawable/question"
                 app:layout_constraintBottom_toBottomOf="@+id/textView4"
                 app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -194,8 +208,8 @@
                 android:id="@+id/info_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@null"
                 android:layout_marginStart="5dp"
+                android:background="@null"
                 android:src="@drawable/question"
                 app:layout_constraintBottom_toBottomOf="@+id/textView6"
                 app:layout_constraintStart_toEndOf="@+id/textView6"
