--- a/app/src/main/res/layout/fragment_ban_party.xml
+++ b/app/src/main/res/layout/fragment_ban_party.xml
@@ -6,12 +6,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Profile.ActualPartyFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:listitem="@layout/item_current_user_party"/>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            tools:listitem="@layout/item_current_user_party"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/textView"
@@ -19,7 +26,7 @@
         android:layout_height="wrap_content"
         style="@style/text_medium_16_style"
         android:textColor="@color/secondary_text_color"
-        android:text="Нет актуальных вечеринок"
+        android:text="Нет заблокированных вечеринок"
         android:visibility="invisible"
         android:layout_gravity="center"/>
 
