--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,12 +97,12 @@
 
             <TextView
                 android:id="@+id/text_error"
+                style="@style/helper_text_medium_12_style_over"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/helper_text_medium_12_style_over"
-                android:text="Неверный логин или пароль"
-                android:visibility="invisible"
-                android:layout_marginTop="14dp"/>
+                android:layout_marginTop="14dp"
+                android:text="Неверный email или пароль"
+                android:visibility="invisible" />
 
         </LinearLayout>
 
