--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -29,19 +29,40 @@
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_marginHorizontal="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:goIcon="@drawable/cross"
+        app:searchIcon="@drawable/search"
+        app:closeIcon="@drawable/cross"
+        app:defaultQueryHint="Найди свою вечеринку"
+        app:theme="@style/AppSearchView"
+        android:contextClickable="true"
+        app:iconifiedByDefault="false"
+        android:paddingStart="-10dp"
+        app:searchHintIcon="@null"
+        app:queryBackground="@android:color/transparent"
+        android:background="@drawable/edit_text_selector"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
     <Button
         android:id="@+id/button_place"
         style="@style/image_button_main_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
+        android:layout_marginTop="5dp"
         android:drawableStart="@drawable/location_main_text_color"
         android:drawablePadding="7dp"
         android:text="Россия"
-        android:layout_marginTop="10dp"
         android:textColor="@color/main_text_color"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
 
     <Button
